<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/transparent">

    <FrameLayout
        android:id="@+id/frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AbsoluteLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/glasses"
                android:layout_width="1131dp"
                android:layout_height="748dp"
                android:layout_x="-246dp"
                android:layout_y="-14dp"
                android:src="@drawable/glasses_progressives" />

            <com.vitorpamplona.netrometer.activity.views.CrosshairView
                android:id="@+id/crosshair_view"
                android:layout_width="match_parent"
                android:layout_y="190dp"
                android:layout_height="@dimen/crosshair_view_height"
                android:background="@android:color/transparent" />

            <TextView
                android:id="@+id/remove_glasses"
                style="@style/SubHeader"
                android:layout_width="match_parent"
                android:layout_height="@dimen/crosshair_view_height"
                android:layout_marginBottom="48dp"
                android:layout_y="165dp"
                android:text="@string/remove_glasses" />

            <TextView
                android:id="@+id/warning_no_glasses"
                style="@style/SubHeader"
                android:layout_width="match_parent"
                android:layout_height="@dimen/crosshair_view_height"
                android:layout_marginBottom="48dp"
                android:layout_y="165dp"
                android:text="@string/waiting_for_glasses" />

        </AbsoluteLayout>

    </FrameLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Header"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/load_left_distance"
        android:id="@+id/instructions_1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/SubHeader"
        android:layout_marginBottom="16dp"
        android:layout_below="@id/instructions_1"
        android:text="@string/hold_trigger_tap_next"
        android:id="@+id/instructions_2" />

    <LinearLayout
        android:id="@+id/realtime_results"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/instructions_2"
        android:layout_marginRight="17dp"
        android:layout_marginBottom="48dp"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/realtime_results_sph"
                style="@style/SubHeader"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:gravity="right|center_vertical"
                android:text="-2.00" />

            <TextView
                android:id="@+id/realtime_results_cyl"
                style="@style/SubHeader"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:gravity="right|center_vertical"
                android:text="-0.50" />

            <TextView
                android:id="@+id/realtime_results_axis"
                style="@style/SubHeader"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:gravity="right|center_vertical"
                android:text="180" />

        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="-50dp"
        android:src="@drawable/phone_frame"
        android:id="@+id/phone_frame" />



    <Button
        android:id="@+id/next_button"
        android:layout_width="match_parent"
        android:layout_height="238px"
        android:layout_alignParentBottom="true"
        android:text="@string/next_uppercase"
        style="@style/Header"
        android:layout_margin="16dp"
        android:textColor="@color/btn_next_text"
        android:background="@drawable/btn_next" />

    <ImageButton
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="-32dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/skip_button"
        android:src="@drawable/skip_icon"
        android:text="@string/skip_near_button"
        android:id="@+id/skip_near_button"
        android:layout_alignTop="@+id/next_button"
        android:layout_alignRight="@+id/next_button"
        android:clickable="true"
        android:elevation="100dp"
        android:adjustViewBounds="false" />

</RelativeLayout>
